Fixed styling of table cells with very long names. Added horizontal scrolling for long names. Changed styling of scroll bars.

--- a/MetaMood/Components/DataTable.razor.css
+++ b/MetaMood/Components/DataTable.razor.css
@@ -92,6 +92,13 @@ tr:nth-child(even) {
     border: 3px solid black;
     padding-left: 5px;
     padding-right: 5px;
+    max-width: 20vw;
+}
+
+.table-cell-container 
+{
+    word-wrap: break-word;
+    overflow-y: scroll;
 }
 
 .table-row:hover
@@ -109,15 +116,43 @@ tr:nth-child(even) {
 {
     background-color: #331465;
     width: 100%;
-    display: inline-flex;
-    float: right;
-    justify-content: flex-end;
+    display: inline-grid;
     align-content: center;
+    overflow-y: scroll
 }
+
+.error-message {
+    grid-row-start: 1;
+    color: white;
+    align-self: center;
+    margin-left: 1em;
+    overflow-y: scroll;
+    overflow-x: scroll;
+    margin-right: 1em;
+}
+
+@media (max-width: 992px) {
+    .error-message {
+        grid-row-start: 2;
+        color: white;
+        align-self: center;
+        margin-left: 1em;
+        overflow-y: scroll;
+        overflow-x: scroll;
+        margin-right: 1em;
+    }
+}
+
 
 .pagination-ul
 {
     margin: 0.25em 1em 0.25em auto;
+}
+
+.pagination-nav
+{
+    grid-row-start: 1;
+    justify-self: flex-end;
 }
 
 .page-link
@@ -225,6 +260,28 @@ tr:nth-child(even) {
 .search-button:hover {
     background-color: #997ACB;
     color: #331465;
+}
+
+/*
+    Scroll bar styling taken from Waruna Marjula on StackOverflow
+    https://stackoverflow.com/a/65776078
+*/
+* {
+    scrollbar-width: thin;
+    scrollbar-color: skyblue #000066;
+}
+
+*::-webkit-scrollbar {
+    width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+    background: black;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: skyblue;
+    border-radius: 1px;
 }
 
 
